Fixed section on room block

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 						The workshop will be held at the <a href="https://fluno.com/">Fluno Center</a>
 						at 601 University Avenue, Madison, WI 53715.
 						A room block with special rates is available at the Fluno Center. Only a 
-						limited number of rooms are available. A link will be made available 
-						here once it becomes available.
+						limited number of rooms are available. 
+						Details for using the room block rate will be made available to those 
+						attending the event as described below.
 					</p>
 				</div>
 			</div>
@@ -58,7 +59,7 @@
 						There is no fee for the event.
 						However, there are a limited number of spots available for the event.
 						If you would like to attend the event,  
-						we ask that you complete this interet form (TBA) by March 1, 2026. 
+						we ask that you complete this interest form (TBA) by March 1, 2026. 
 						We will send you a declination or confirmation email shortly 
 						after the deadline.
 					</p>
