Removed support. Added image.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
 </head>
 <body>
-  	<section class="section">
+  	<section class="section" id="title">
 		<div class="container">
-			<h1 class="title">Inaugural Midwest Randomized Linear Algebra Workshop </h1>
-			<h2 class="subtitle">Madison, WI &#183; May 11 to 12, 2026</h2>
+			<div class="columns">
+				<div class="column is-half">
+					<h1 class="title">Inaugural Midwest Randomized Linear Algebra Workshop </h1>
+					<h2 class="subtitle">Madison, WI &#183; May 11 to 12, 2026</h2>
+					<figure class="image">
+						<img 
+							src="https://www.wisc.edu/images/admissions/capitol-rainbow-1600x940.jpg" 
+							alt="Image of the legislative seat of government in Madison, Wisconsin."
+						/>
+					</figure>
+				</div>
+			</div>
 		</div>
   	</section>
   	<section class="section" id="logistics">
@@ -28,8 +38,8 @@
 						</a>
 						and 
 						<a href="https://www.nsf.gov/awardsearch/show-award/?AWD_ID=2309446">
-							2309446
-						</a>.
+							2309446.
+						</a>
 					</p>
 				</div>
 			</div>
@@ -45,7 +55,7 @@
 						A room block with special rates is available at the Fluno Center. Only a 
 						limited number of rooms are available. 
 						Details for using the room block rate will be made available to those 
-						attending the event as described below.
+						accepted to the workshop.
 					</p>
 				</div>
 			</div>
@@ -54,14 +64,17 @@
 		<div class="container">
 			<div class="columns">
 				<div class="column is-half" id="registration">
-					<h4 class="title is-4">Registration / Application</h4>
+					<h4 class="title is-4">Interest Form</h4>
 					<p>
-						There is no fee for the event.
-						However, there are a limited number of spots available for the event.
+						There are a limited number of spots available for the event.
 						If you would like to attend the event,  
-						we ask that you complete this interest form (TBA) by March 1, 2026. 
+						we ask that you complete
+						<a href="https://docs.google.com/forms/d/e/1FAIpQLSfn2I-iSLySRXVLc9u1167Ep616VoNRjPfUMM-58SrPFBvybQ/viewform?usp=dialog"
+						>this interest form</a> by <strong>February 13, 2026
+						5pm CT</strong>. 
 						We will send you a declination or confirmation email shortly 
 						after the deadline.
+						There is <strong>no</strong> registration fee for this event.
 					</p>
 				</div>
 			</div>
@@ -188,19 +201,7 @@
 			</div>
 		</div>
   	</section>
-	<section class="section" id="support">
-		<div class="container">
-			<div class="columns">
-				<div class="column is-half" id="support">
-					<h4 class="title is-4">Support</h4>
-					<p>
-						A limited amount of support is available to cover accommodation costs.
-						To request this funding, please complete this form (TBA) by March 1, 2026.
-					</p>
-				</div>
-			</div>
-		</div>
-		<br />
+	<section class="section" id="questions">
 		<div class="container">
 			<div class="columns">
 				<div class="column is-half" id="questions">
