Updated information under interest form

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
 				<div class="column is-half" id="registration">
 					<h4 class="title is-4">Interest Form</h4>
 					<p>
-						There are a limited number of spots available for the event.
-						If you would like to attend the event,  
+						There are a limited number of spots available for the workshop.
+						If you would like to attend,  
 						we ask that you complete
 						<a href="https://docs.google.com/forms/d/e/1FAIpQLSfn2I-iSLySRXVLc9u1167Ep616VoNRjPfUMM-58SrPFBvybQ/viewform?usp=dialog"
 						>this interest form</a> by <strong>February 13, 2026
 						5pm CT</strong>. 
 						We will send you a declination or confirmation email shortly 
 						after the deadline.
-						There is <strong>no</strong> registration fee for this event.
+						There is <strong>no</strong> registration fee.
 					</p>
 				</div>
 			</div>
