Updated questions section

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 				<div class="column is-half" id="questions">
 					<h4 class="title is-4">Questions</h4>
 					<p>
-						If you have questions or concerns, please email to both
+						If you have questions or concerns, please send an email to both
 						<a href="mailto:vivak.patel@wisc.edu">Vivak Patel</a>
 						and 
 						<a href="mailto:maldonadod@uchicago.edu">D. Adrian Maldonado</a>.
